--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@ a:hover {
     text-decoration: underline;
 }
 
-
+input[type="your-name"]
+{
+    font-weight: bold;
+}
 
 
 /* Add more custom styles as needed */
