--- a/style.css
+++ b/style.css
@@ -45,9 +45,24 @@ a:hover {
 }
 
 .wpcf7 form label[for="your-name"] {
-    color: blue;
+    font-weight: bold;
 }
 
+.wpcf7 form label[for="your-email"] {
+    font-weight: bold;
+}
 
+.wpcf7 form label[for="your-subject"] {
+    font-weight: bold;
+}
+
+.wpcf7 form label[for="your-message"] {
+    font-weight: bold;
+}
+
+.wpcf7 form label[for="submit-button"] {
+    color:white;
+    background-color: #1D6EC1;
+}
 
 /* Add more custom styles as needed */
