--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ a:hover {
     border-radius: 8px; /* Zaoblení rohů */
     cursor: pointer; /* Změna kurzoru na ručičku */
     font-size: 16px; /* Velikost písma */
+    margin-left:20px;
 }
 
 .wpcf7 form input[type="your-name"],
@@ -78,11 +79,10 @@ a:hover {
 .wpcf7 form input[type="your-subject"],
 .wpcf7 form input[type="your-message"] {
     border: 2px solid #333; /* Nastavení barvy a tloušťky okraje */
-    padding: 10px; /* Vnitřní odsazení */
     border-radius: 8px; /* Zaoblení rohů */
     width: 100%; /* Šířka polí */
     font-size: 16px; /* Velikost písma */
-    background-color: #f9f9f9; /* Barva pozadí */
 }
+
 
 /* Add more custom styles as needed */
