--- a/style.css
+++ b/style.css
@@ -50,28 +50,27 @@ a:hover {
 
 .wpcf7 form label[for="your-email"] {
     font-weight: bold;
-    padding-top:8px;
+    margin-top:8px;
 }
 
 .wpcf7 form label[for="your-subject"] {
     font-weight: bold;
-    padding-top:8px;
+    margin-top:8px;
 }
 
 .wpcf7 form label[for="your-message"] {
     font-weight: bold;
-    padding-top:8px;
+    margin-top:8px;
 }
 
 .wpcf7 form label[for="submit-button"] {
-    color: white; /* Barva textu tlačítka */
-    padding: 10px 20px; /* Vnitřní odsazení */
-    border: none; /* Bez okraje */
+    color: white; 
+    padding: 10px 20px; 
+    border: none;
     background-color: #1D6EC1;
-    border-radius: 8px; /* Zaoblení rohů */
-    cursor: pointer; /* Změna kurzoru na ručičku */
-    font-size: 16px; /* Velikost písma */
-    margin-left:20px;
+    border-radius: 8px; 
+    cursor: pointer; 
+    font-size: 16px; 
 }
 
 .wpcf7 form input[type="your-name"],
