--- a/style.css
+++ b/style.css
@@ -74,16 +74,21 @@ a:hover {
     border-radius: 8px; 
     cursor: pointer; 
     font-size: 16px; 
+    margin-top: -4px;
 }
 
 .wpcf7 form input[name="your-name"],
 .wpcf7 form input[name="your-email"],
-.wpcf7 form input[name="your-subject"],
-.wpcf7 form input[name="your-message"] {
-    border: 2px solid #333; /* Nastavení barvy a tloušťky okraje */
+.wpcf7 form input[name="your-subject"] {
     border-radius: 8px; /* Zaoblení rohů */
     width: 100%; /* Šířka polí */
     font-size: 16px; /* Velikost písma */
+}
+
+.wpcf7 form input[name="your-message"]{
+    border-radius: 8px; /* Zaoblení rohů */
+    width: 100%; /* Šířka polí */
+    font-size: 16px; 
 }
 
 
