--- a/style.css
+++ b/style.css
@@ -82,7 +82,9 @@ a:hover {
 .wpcf7 form textarea[name="your-message"] {
     border-radius: 8px; /* Zaoblení rohů */
     width: 100%; /* Šířka polí */
-    font-size: 16px; /* Velikost písma */
+    font-weight:normal;
+    padding: 2px 0 2px 0;
+    
 }
 
 
