--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ a:hover {
     border-radius: 8px; /* Zaoblení rohů */
     width: 100%; /* Šířka polí */
     font-weight:normal;
-    padding: 2px 0 2px 0;
-    
+    padding: 4px 0 4px 0;
+    margin-left: 4px;
 }
 
 
