--- a/style.css
+++ b/style.css
@@ -22,9 +22,12 @@ Tags:
 /* Add your custom styles below */
 
 /* Example custom style */
-html{
+* {
     margin: 0;
-}
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
 
 body {
     font-family: 'Roboto', sans-serif;
