--- a/style.css
+++ b/style.css
@@ -1,24 +1,9 @@
-/*
-Theme Name: My Custom Theme
-Theme URI: http://example.com/my-custom-theme
-Author: Your Name
-Author URI: http://example.com
-Description: A custom WordPress theme with Tailwind CSS integration.
-Version: 1.0
-License: GPL2
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: gym-tabletka
-Tags:
-*/
-
-/* Example custom style */
-html{
+html {
     margin-top: 0px !important;
 }
-  
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #f5f5f5;
 }
 
@@ -27,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    color: #1D6EC1;
+    color: #1d6ec1;
     text-decoration: none;
 }
 
@@ -41,30 +26,30 @@ a:hover {
 
 .wpcf7 form label[for="your-email"] {
     font-weight: bold;
-    margin-top:8px;
+    margin-top: 8px;
     display: block;
 }
 
 .wpcf7 form label[for="your-subject"] {
     font-weight: bold;
-    margin-top:8px;
+    margin-top: 8px;
     display: block;
 }
 
 .wpcf7 form label[for="your-message"] {
     font-weight: bold;
-    margin-top:8px;
+    margin-top: 8px;
     display: block;
 }
 
 .wpcf7 form label[for="submit-button"] input {
-    color: white; 
-    padding: 10px 20px; 
+    color: white;
+    padding: 10px 20px;
     border: none;
-    background-color: #1D6EC1;
-    border-radius: 8px; 
-    cursor: pointer; 
-    font-size: 16px; 
+    background-color: #1d6ec1;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
     display: flex;
     justify-items: center;
 }
@@ -73,11 +58,17 @@ a:hover {
 .wpcf7 form input[name="your-email"],
 .wpcf7 form input[name="your-subject"],
 .wpcf7 form textarea[name="your-message"] {
-    border-radius: 8px; /* Zaoblení rohů */
-    width: 100%; /* Šířka polí */
-    font-weight:normal;
+    border-radius: 8px;
+    width: 100%;
+    font-weight: normal;
     padding: 4px 0 4px 4px;
 }
 
+.woocommerce ul.products li.product,
+.woocommerce-page ul.products li.product {
+    width: unset !important;
+}
 
-/* Add more custom styles as needed */
+.woocommerce ul.products li.product .onsale {
+    margin: unset;
+}
