--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@ a:hover {
     padding: 4px 0 4px 4px;
 }
 
+.page-title {
+    font-size: 4rem;
+    font-weight: 500;
+}
+
+.woocommerce-result-count {
+    margin: .5rem 0 2rem 0;
+}
+
 .woocommerce ul.products li.product,
 .woocommerce-page ul.products li.product {
     width: unset !important;
