--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a:hover {
 }
 
 .woocommerce-result-count {
-    margin: .5rem 0 2rem 0;
+    margin: 1rem 0 3rem 0;
 }
 
 .woocommerce ul.products li.product,
